--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -45,6 +45,11 @@ test:
 about:
   home: https://github.com/dustalov/evalica
   summary: Evalica, your favourite evaluation toolkit.
+  description: |
+    Evalica is a Python library that transforms pairwise comparisons
+    into ranked lists of items. It offers convenient high-performant
+    Rust implementations of the corresponding methods via PyO3,
+    and additionally provides naïve Python code for most of them.
   license: Apache-2.0
   license_file:
     - LICENSE
