--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -18,8 +18,8 @@ build:
     - cargo-bundle-licenses --format yaml --output THIRDPARTY.yml
     - export PKG_CONFIG_PATH="${PREFIX}/lib/pkgconfig${PKG_CONFIG_PATH:+:${PKG_CONFIG_PATH}}"  # [unix]
     - set "PKG_CONFIG_PATH=%PREFIX%\Library\lib\pkgconfig"  # [win]
-    - MATURIN_PEP517_ARGS="--features python,netlib-src" {{ PYTHON }} -m pip install . -vv --no-deps --no-build-isolation  # [unix]
-    - set "MATURIN_PEP517_ARGS=--features python,netlib-src" && {{ PYTHON }} -m pip install . -vv --no-deps --no-build-isolation  # [win]
+    - MATURIN_PEP517_ARGS="--features python,openblas-src" {{ PYTHON }} -m pip install . -vv --no-deps --no-build-isolation  # [unix]
+    - set "MATURIN_PEP517_ARGS=--features python,openblas-src" && {{ PYTHON }} -m pip install . -vv --no-deps --no-build-isolation  # [win]
   python_version_independent: true  # [is_abi3]
   skip: true  # [is_abi3 and not is_python_min]
 
@@ -31,12 +31,14 @@ requirements:
     - cargo-bundle-licenses
     - pkg-config
   host:
-    - libblas
+    - openblas
     - maturin
     - pip
     - python-abi3  # [is_abi3]
     - python
   run:
+    - libblas * *openblas
+    - openblas
     - python
     - pandas
     - scipy
