--- a/.ci_support/linux_64_is_python_mintruepython3.10.____cpython.yaml
+++ b/.ci_support/linux_64_is_python_mintruepython3.10.____cpython.yaml
@@ -1,33 +1,35 @@
-MACOSX_DEPLOYMENT_TARGET:
-- '10.13'
-MACOSX_SDK_VERSION:
-- '10.13'
 c_compiler:
-- clang
+- gcc
 c_compiler_version:
-- '19'
+- '14'
 c_stdlib:
-- macosx_deployment_target
+- sysroot
 c_stdlib_version:
-- '10.13'
+- '2.17'
 channel_sources:
 - conda-forge
 channel_targets:
 - conda-forge main
-macos_machine:
-- x86_64-apple-darwin13.4.0
-numpy:
-- '2'
+docker_image:
+- quay.io/condaforge/linux-anvil-x86_64:alma9
+is_abi3:
+- true
+is_python_min:
+- true
+openblas:
+- 0.3.*
 pin_run_as_build:
   python:
     min_pin: x.x
     max_pin: x.x
 python:
-- 3.13.* *_cp313
+- 3.10.* *_cpython
+python_min:
+- '3.10'
 rust_compiler:
 - rust
 target_platform:
-- osx-64
+- linux-64
 zip_keys:
 - - python
-  - channel_sources
+  - is_python_min
