--- a/.ci_support/osx_64_is_python_mintruepython3.10.____cpython.yaml
+++ b/.ci_support/osx_64_is_python_mintruepython3.10.____cpython.yaml
@@ -1,7 +1,7 @@
 MACOSX_DEPLOYMENT_TARGET:
-- '10.13'
+- '11.0'
 MACOSX_SDK_VERSION:
-- '10.13'
+- '11.0'
 c_compiler:
 - clang
 c_compiler_version:
@@ -9,25 +9,31 @@ c_compiler_version:
 c_stdlib:
 - macosx_deployment_target
 c_stdlib_version:
-- '10.13'
+- '11.0'
 channel_sources:
 - conda-forge
 channel_targets:
 - conda-forge main
+is_abi3:
+- true
+is_python_min:
+- true
 macos_machine:
 - x86_64-apple-darwin13.4.0
-numpy:
-- '2'
+openblas:
+- 0.3.*
 pin_run_as_build:
   python:
     min_pin: x.x
     max_pin: x.x
 python:
-- 3.12.* *_cpython
+- 3.10.* *_cpython
+python_min:
+- '3.10'
 rust_compiler:
 - rust
 target_platform:
 - osx-64
 zip_keys:
 - - python
-  - channel_sources
+  - is_python_min
