--- a/.ci_support/win_64_is_python_mintruepython3.10.____cpython.yaml
+++ b/.ci_support/win_64_is_python_mintruepython3.10.____cpython.yaml
@@ -3,21 +3,27 @@ c_compiler:
 c_stdlib:
 - vs
 channel_sources:
-- conda-forge,conda-forge/label/python_rc
+- conda-forge
 channel_targets:
 - conda-forge main
-numpy:
-- '2'
+is_abi3:
+- true
+is_python_min:
+- true
+openblas:
+- 0.3.*
 pin_run_as_build:
   python:
     min_pin: x.x
     max_pin: x.x
 python:
-- 3.14.* *_cp314
+- 3.10.* *_cpython
+python_min:
+- '3.10'
 rust_compiler:
 - rust
 target_platform:
 - win-64
 zip_keys:
 - - python
-  - channel_sources
+  - is_python_min
