--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,37 +1,50 @@
 {% set name = "evalica" %}
-{% set version = "0.3.2" %}
+{% set version = "0.4.0.post1" %}
+{% set sha256 = "4ec1e857ffde448e582794e06d3336a46e93aa3fe64aec8ebbc7eadb53a66807" %}
 
 package:
-  name: {{ name|lower }}
+  name: {{ name | lower }}
   version: {{ version }}
 
 source:
   url: https://pypi.org/packages/source/{{ name[0] }}/{{ name }}/evalica-{{ version }}.tar.gz
-  sha256: 44de2a2c4b742ca4a82c9fa032dec0ce6167e78e159a8c07dbb4268cf7e857b5
+  sha256: {{ sha256 }}
 
 build:
+  number: 0
+  ignore_run_exports:
+    - python
   entry_points:
     - evalica = evalica.__main__:main
   script:
     - cargo-bundle-licenses --format yaml --output THIRDPARTY.yml
-    - {{ PYTHON }} -m pip install . -vv --no-deps --no-build-isolation
-  number: 1
+    - export PKG_CONFIG_PATH="${PREFIX}/lib/pkgconfig${PKG_CONFIG_PATH:+:${PKG_CONFIG_PATH}}"  # [unix]
+    - set "PKG_CONFIG_PATH=%PREFIX%\Library\lib\pkgconfig"  # [win]
+    - MATURIN_PEP517_ARGS="--features python,openblas-src" {{ PYTHON }} -m pip install . -vv --no-deps --no-build-isolation  # [unix]
+    - set "MATURIN_PEP517_ARGS=--features python,openblas-src" && {{ PYTHON }} -m pip install . -vv --no-deps --no-build-isolation  # [win]
+  python_version_independent: true  # [is_abi3]
+  skip: true  # [is_abi3 and not is_python_min]
 
 requirements:
   build:
     - {{ compiler('c') }}
     - {{ compiler('rust') }}
-    - {{ stdlib("c") }}
+    - {{ stdlib('c') }}
     - cargo-bundle-licenses
+    - pkg-config
   host:
+    - libopenblas
+    - openblas
     - maturin
-    - numpy
-    - pandas
     - pip
+    - python-abi3  # [is_abi3]
     - python
   run:
-    - pandas
+    - libopenblas
+    - openblas
     - python
+    - pandas
+    - scipy
 
 test:
   imports:
@@ -39,17 +52,20 @@ test:
   commands:
     - pip check
     - evalica --help
+    - python -c "import evalica, sys; print('BLAS:', blas := evalica._brzo.HAS_BLAS); sys.exit(int(not blas))"
+    - abi3audit $SP_DIR/evalica/_brzo.abi3.so -s -v --assume-minimum-abi3 {{ python_min }}  # [unix and is_abi3]
+    - abi3audit %SP_DIR%\evalica\_brzo.pyd -s -v --assume-minimum-abi3 {{ python_min }}  # [win and is_abi3]
   requires:
     - pip
+    - abi3audit  # [is_abi3]
 
 about:
   home: https://github.com/dustalov/evalica
   summary: Evalica, your favourite evaluation toolkit.
   description: |
-    Evalica is a Python library that transforms pairwise comparisons
-    into ranked lists of items. It offers convenient high-performant
-    Rust implementations of the corresponding methods via PyO3,
-    and additionally provides naïve Python code for most of them.
+    Evalica is an evaluation toolkit for statistical analysis,
+    combining fast Rust implementations with Python APIs for
+    ranking, reliability, and uncertainty estimation.
   license: Apache-2.0
   license_file:
     - LICENSE
